js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib2/GetC.kt
fun getObjectC() : C {
    return myObject
}
